Added advanced concepts for typescript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <script src="./dist/app.js" defer></script>
 </head>
 <body>
-    
+    <input type="text" id="user-input"/>
+    <div id="app"></div>
+    <button id="click-button">click me!</button>
+    <form>
+        <input type="text" id="course-title" placeholder="Course Title"/>
+        <input type="text" id="course-price" placeholder="Course Price"/>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
